--- a/02_FlexBox_e_CSS/Projeto-Apeperia/css/base.css
+++ b/02_FlexBox_e_CSS/Projeto-Apeperia/css/base.css
@@ -1,38 +1,47 @@
 :root {
-    --branco: #FFF;
-    --azul-claro: #DFE3E5;
-    --vermelho-forte: #B72E2E;
-    --cinza-escuro: #4F4C4C;
-    --cinza-claro: #F7F4F4;
-    --cinza-medio: #D9D9D9;
-        
-    --fonte-link: #0084FF;
-    --fonte-cinza: #666;
-    --borda-cabecalho-mobile: #103D4A;
-    --bg-rodape: #333;
-    --bg-chamada-mobile: #00161C;
+  --branco: #fff;
+  --azul-claro: #dfe3e5;
+  --vermelho-forte: #b72e2e;
+  --cinza-escuro: #4f4c4c;
+  --cinza-claro: #f7f4f4;
+  --cinza-medio: #d9d9d9;
 
-    --planos-cartao-start: #56CCF2;
-    --planos-cartao-ultra: #B04CD9;
-    --planos-cartao-mega: #E33B3B;
-    
-    --monserrat : 'montserrat', sans-serif;
-    --open-sans : 'open sans', sans-serif;
+  --fonte-link: #0084ff;
+  --fonte-cinza: #666;
+  --borda-cabecalho-mobile: #103d4a;
+  --bg-rodape: #333;
+  --bg-chamada-mobile: #00161c;
+
+  --planos-cartao-start: #56ccf2;
+  --planos-cartao-ultra: #b04cd9;
+  --planos-cartao-mega: #e33b3b;
+
+  --monserrat: "montserrat", sans-serif;
+  --open-sans: "open sans", sans-serif;
 }
 
-body{
-    font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Open Sans", sans-serif;
 }
-.container{
-    padding: 0% 6%;
-}
-.botao{
-    text-align: center;
-    display: block;
-    width: 100%;
-    max-width: 350px;
-    box-sizing: border-box;
 
-    padding: 1rem 1rem;
-    border: 1px solid var(--branco);
+.container {
+  padding: 0% 6%;
+}
+
+.botao {
+  text-align: center;
+  display: block;
+  width: 100%;
+  max-width: 350px;
+  box-sizing: border-box;
+
+  padding: 1rem 1rem;
+  border: 1px solid var(--branco);
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    padding-left: calc((100% - 940px) / 2);
+    padding-right: calc((100% - 940px) / 2);
+  }
 }
